
XX XXX 2022
Version 6.0.0-RC.15
======================================================================================================================
All except AllOverIt.Aws.Cdk.AppSync
  * Added support for NET 7.0

AllOverIt
  * ObjectPropertySerializer now correctly applies enumerable collation seperator when there is a filter (which
    overrides the global enumerable options).


12 Oct 2022
Version 6.0.0-RC.14
======================================================================================================================
AllOverIt
  * Dispose a breadcrumbs enumerator
  * Unsealed PageResult<TResult> so it can be augmented with additional information through inheritance.

AllOverIt.Aws.Cdk.AppSync
  * Updated Amazon.CDK.AWS.AppSync to v1.176.0

AllOverIt.Csv
  * Updated CsvHelper to v29.0.0

AllOverIt.Aws.AppSync.Client
  * Updated Microsoft.Extensions.DependencyInjection to v6.0.1


16 Sep 2022
Version 6.0.0-RC.13
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
AllOverIt.EntityFrameworkCore
AllOverIt.Serialization.SystemTextJson
AllOverIt.Validation
  * External dependency updates


11 Sep 2022
Version 6.0.0-RC.12
======================================================================================================================
ALL - Dropped support for NET STANDARD 2.0

AllOverIt.EntityFramework.Pagination
AllOverIt.Pagination
  * Moved PageResult from AllOverIt.EntityFramework.Pagination to AllOverIt.Pagination
  * Added the ability to encode a hash value within a serialized continuation token. This, along with the compression
    option, have moved to a ContinuationTokenOptions class.
  * Internal refactoring to make code more extendable and testable
  * Renamed AddQueryPaginatorFactory() extension method to AddQueryPagination()
  * Added IContinuationTokenValidator