@@ -6,7 +6,8 @@
         /// <summary>Default constructs the target type and copies properties from the provided source type.</summary>
         /// <typeparam name="TTarget">The target type.</typeparam>
         /// <param name="source">The source instance to copy property values from.</param>
-        /// <returns>The same target instance after all source properties have been copied.</returns>
+        /// <returns>a new target instance after all source properties have been copied. If the source is null
+        /// then null will be returned.</returns>
         TTarget Map<TTarget>(object source) 
             where TTarget : class, new();
 
@@ -16,6 +17,8 @@
         /// <param name="source">The source object to be mapped onto a target.</param>
         /// <param name="target">The target instance to have property values copied onto.</param>
         /// <returns>The same target instance after all source properties have been copied.</returns>
-        TTarget Map<TSource, TTarget>(TSource source, TTarget target);
+        TTarget Map<TSource, TTarget>(TSource source, TTarget target)
+            where TSource : class
+            where TTarget : class;
     }
 }
